# eon

./: .ocamlformat  README.md  dune-project  eon.opam  example.eon
examples/: arrays.eon  factorial.eon  fibonacci.eon  functions.eon  hello.eon  logic.eon  math.eon  records.eon  references.eon
src/eon_driver/: colors.ml  dune  eon_driver.ml  eon_driver.mli
src/eon_interpreter/: dune  eon_interpreter.ml  eon_interpreter.mli
src/eon_parser/: ast.ml  dune  eon_parser.ml  eon_parser.mli  lexer.ml  lexer.mli  parser.mly  parsetree.ml  parsetree.mli  token.mly
src/eon_report/: dune  eon_report.ml  eon_report.mli
src/eon_typechecker/: ast.ml  ast.mli  dune  env.ml  env.mli  eon_typechecker.ml  eon_typechecker.mli  typedtree.ml  typedtree.mli
